# machine_learning_app

./: CMakeLists.txt
include/: nn.h
src/: adder_gen.c  gym.c  png2mat.c  xor_gen.c
